--- a/Type game/css/style.css
+++ b/Type game/css/style.css
@@ -15,13 +15,13 @@ body{
     background-color: #041E40;
 }
 
-.wraper{
+.wrapper{
     background-color: #fff;
     padding: 35px;
     width: 800px;
     border-radius: 10px;
 }
-.wraper .content-box{
+.wrapper .content-box{
     padding: 13px 20px 0;
     border: 1px solid #ccc;
     border-radius: 10px;
@@ -40,6 +40,42 @@ body{
     font-size: 18px;
     text-align: justify;
     letter-spacing: 1px;
+}
+.typing-text p span{
+    position: relative;
+}
+.typing-text p span.correct{
+    color: #56964f;
+
+}
+.typing-text p span.incorrect{
+    color: #cb3439;
+    background: #ffc0cb;
+    outline: 1px solid #fff;
+    border-radius: 4px;
+
+}
+.typing-text p span.active{
+    color: #17a2b8;
+
+}
+.typing-text p span.active::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 2px;
+    width: 100%;
+    opacity: 0;
+    background: #17a2b8;
+    animation: blink 1s ease-in-out infinite;
+}
+
+@keyframes blink {
+    50%{
+        opacity: 1;
+    }
+    
 }
 
 .content-box .content{
